--- a/package.json
+++ b/package.json
@@ -4,22 +4,69 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --open"
+    "dev": "webpack-dev-server --inline --open --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@progress/kendo-ui": "^2017.1.118",
-    "angular" : "^1.6"
+    "@progress/kendo-theme-default": "2.53.0",
+    "@progress/kendo-ui": "^2018.2.620",
+    "@uirouter/angularjs": "1.0.18",
+    "angular": "^1.6",
+    "angular-animate": "^1.6",
+    "angular-aria": "^1.6",
+    "angular-loading-bar": "0.9.0",
+    "angular-messages": "^1.6",
+    "angular-route": "^1.6",
+    "angular-sanitize": "^1.6",
+    "bootstrap": "4.1.0",
+    "gsap": "2.0.1",
+    "jquery": "3.3.1",
+    "jszip": "2.6.1",
+    "lodash": "4.14.0",
+    "noty": "3.2.0-beta",
+    "pako": "1.0.6",
+    "popper.js": "1.14.3",
+    "toastr": "2.1.2"
   },
   "devDependencies": {
-    "file-loader": "0.10.0",
-    "source-map-loader": "^0.1.5",
-    "css-loader": "0.26.2",
-    "style-loader": "0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "1.7.0",
+    "check-dependencies": "1.1.0",
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.5.1",
+    "cross-env": "5.1.6",
+    "css-loader": "0.28.11",
+    "exports-loader": "0.7.0",
+    "extract-loader": "2.0.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.11",
+    "html-loader": "0.5.5",
+    "iisexpress-proxy": "1.4.3",
+    "node-sass": "4.9.0",
+    "npm-run-all": "4.1.3",
+    "path": "0.12.7",
+    "postcss": "6.0.21",
+    "postcss-cli": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.1.5",
+    "sass-loader": "7.0.1",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "0.21.0",
+    "stylelint": "9.2.0",
+    "stylelint-declaration-block-no-ignored-properties": "1.1.0",
+    "stylelint-scss": "3.0.0",
+    "surge": "^0.20.1",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "1.0.1",
+    "webpack": "4.8.3",
+    "webpack-cli": "2.1.4",
+    "webpack-dev-server": "3.1.4",
+    "webpack-module-hot-accept": "1.0.5",
+    "write-file-webpack-plugin": "4.3.2"
   }
 }
