--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "iisexpress-proxy": "1.4.3",
     "node-sass": "4.9.0",
     "npm-run-all": "4.1.3",
@@ -54,6 +55,7 @@
     "postcss-cli": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.1.5",
+    "raw-loader": "^0.5.1",
     "sass-loader": "7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "0.21.0",
